stylesheets/style.css
/*estilos por defecto*/
html,body{

	height: 100%;
	width: 100%;
	margin: 0;
	padding: 0;
	
	background: #f7f7ef;
	color: #141e0c;	

	text-align: center;
	font-family: 'Source Code Pro', sans-serif;
}

h1, h2, h3 {
	font-family: 'Space Grotesk', sans-serif;
}

button{

	background: #f7f7ef;
	color: #436020;
	font-family: 'Space Grotesk', sans-serif;
	font-size: 1rem;
	border: solid;
	box-shadow: 0 6px 5px 0 #436020;
	padding: 4px 8px 4px 8px;
}


#home-info{
	width: 100%;
	height: 102vh;

	text-align: left;

  	display: grid;
  	grid-template-columns: 50% 50%;
}

#home-title{
	position: relative;
	top: 10%;
	left: 25%;
}

#home-title > h1{

	margin-top: 10vh;
	font-family: 'Space Grotesk', sans-serif;
	color: #436020;	
	font-size: calc(24px + 2vw);
}

#home-title >p{
	margin-right: 15vh;
}

#rana{

	position: relative;
	top: 10%;
	right: 10%;

	width: 90vh;
	height: 90vh;

	background-image:url("../images/rana.png");
    background-size: cover;
    background-repeat: no-repeat;
	background-position: center;
}

#btn-cv{
	margin-top: 5vh;
}

#cv{
	color:#436020;
	text-decoration: none;
}


@media (max-width:991px){

	#home-info{
  		grid-template-columns: 100% !important;
	}

	#rana{
		top: -15% !important;
		right: 0% !important;
		left: 20%;

		width: 60vh !important;
		height: 60vh !important;
	}
}

#about-separator{
	background: #436020;
	position: relative;
	left: -2vh;
	top: -10vh;
	width: 50%;
	height: 10vh;
}

#background{
	margin-left: 3%;
	text-align: left;

  	display: grid;
  	grid-template-columns: 40% 40% 20%;
}

#background-title{
	text-align: right;
	color: #436020;
}

#background-text{
	margin-left: 5%;
}

@media (max-width:991px){
	#background{
  		grid-template-columns: 40% 60% !important;
	}

}

#skills{
	width: 100%;
	color: #f7f7ef;
}

#skills-title{
	width: 20vh;
	margin-left: 20%;
	margin-bottom: 0%;
	padding: 1vh;
	background: #436020;
}

#skills-content{
	background: #436020;
	text-align: left;

	padding-left: 10%;
	padding-top: 2%;
	padding-bottom: 2%;

	display: grid;
  	grid-template-columns: 25% 25% 25% 25%;
}

.skill-span{
	display: block;
}

@media (max-width:991px){

	#skills-content{
  		grid-template-columns: 100% !important;
	}

}

.title{
	font-size: 3rem;
}

#home-projects{
	padding-top: 10vh;
}

#projects-page{

	display: none;
	padding-top: 10vh;
	width: 100%;
    
}

#btn-more-projects{
	margin: 5%;
}

#btn-more-projects:hover{
	cursor: pointer;
}

footer{
	margin-top: 4%;
	color: #f7f7ef;
	width: 100%;
}

#contact-title
{
	background: #436020;
	width: 20vh;
	margin-left: 20%;
	margin-bottom: 0%;
	padding: 1vh;
}

footer >div{
	background: #436020;
	margin-bottom: 0%;
	padding: 2% 0% 2% 0%;
}

footer >div a{
	color: #f7f7ef;
	margin-right: 2%;
	text-decoration: none;
}


.interactive:hover{

	cursor: pointer;
}

